# termuxessentialsbyvk

./: README.md  pyproject.toml  setup.cfg
script/: copy  copyitems.sh  create.sh  gen_sql  handlefile  handleopen.sh  handlepath.sh  handlerun.sh  modemenu.sh  moveitems.sh  o  o.txt  open  overwrite  patch  rename.sh  run  share.sh  xtract
script/actions/: create  delete
script/file/: 0_find.sh  0_organise.sh  0_run.sh  0_settings.sh  bashbasicsbyvk.cfg  bashbasicsbyvk_organise.sh  bashbasicsbyvk_run.sh  bashbasicsbyvk_settings.sh  bashbasicsbyvk_transfer.sh  organise.sh
script/fileaction/: 0_handlefile.sh
script/filemanagement/: 0u_up.sh  4d_handledelete.sh  copyitems.sh  handlepath.sh  resolvepath.sh  state.sh
script/filemanagement/relocate/: modemenu.sh
script/test/: hello
