[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termuxessentialsbyvk"
version = "0.0"
description = "Termux workflow utilities"
readme = "README.md"
authors = [{name = "vk datta"}]
license = {text = "MIT"}
requires-python = ">=3.8"

[project.scripts]
0termuxessentialsbyvk = "termuxessentialsbyvk.main:main"
