[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termuxessentialsbyvk"
version = "0.0"
description = "Lightweight Termux workflow utilities"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name="vk datta"}]
license = {text="MIT"}

[project.scripts]
termuxessentialsbyvk = "script.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["script*"]
