[metadata]
name = termuxessentialsbyvk
version = 0.0
description = termuxessentialsbyvk is a lightweight, open-source collection of Bash-Python scripts made to optimize Android Termux workflows and file management. It offers comprehensive, high-performance file management with copy, erase, delete, overwrite, rename, move, batch-create and batch-delete—via a natural-language “omni-tool” launcher (open/o), allowing you to view, edit, share and reorganize items without leaving the prompt. The integrated xtract function automates extraction of HTML tables and links from single- and multi-page sites, streamlining data harvesting from catalogs, reports and dashboards.
author = vk datta
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vkdatta/termuxessentialsbyvk
license = MIT

[options]
scripts =
    script/copy
    script/erase
    script/overwrite
    script/xtract
    script/o
    script/delete
    script/open
    script/create
python_requires = >=3.6
packages = find:

[options.packages.find]
where = .

[classifiers]
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent
