[metadata]
name = termuxessentialsbyvk
version = 0.0
description = termuxessentialsbyvk is a lightweight, open-source collection of Bash-Python scripts made to optimize Android Termux workflows and file management. It offers comprehensive, high-performance file management with copy, erase, delete, overwrite, rename, move, batch-create and batch-delete—via a natural-language “omni-tool” launcher (open/o), allowing you to view, edit, share and reorganize items without leaving the prompt. The integrated xtract function automates extraction of HTML tables and links from single- and multi-page sites, streamlining data harvesting from catalogs, reports and dashboards.
author = vk datta
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vkdatta/termuxessentialsbyvk
license = MIT

[options]
scripts =
    script/actions/copy
    script/actions/erase
    script/actions/overwrite
    script/actions/delete
    script/actions/create
    script/actions/open
    script/o
    script/xtract
    script/filemanagement/relocate/copyitems.sh
    script/filemanagement/relocate/moveitems.sh
    script/filemanagement/relocate/modemenu.sh
    script/filemanagement/0_state.sh
    script/filemanagement/1_handlepath.sh
    script/filemanagement/2u_up.sh
    script/filemanagement/3nf_handlecreate.sh
    script/filemanagement/4d_handledelete.sh
    script/fileaction/0_handlefile.sh
    script/fileaction/0handlerun.sh
    script/fileaction/1handleopen.sh
    script/fileaction/7handlerename.sh
    script/fileaction/8share.sh

python_requires = >=3.6
packages = find:

[options.packages.find]
where = .

[classifiers]
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent
